# patina

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  cpu.rs  key_event_handler.rs  main.rs  processor.rs  program_state.rs  read_write.rs  rom.rs  scheduler.rs  window.rs
src/apu/: apu.rs  dmc.rs  envelope.rs  length_counter.rs  mod.rs  noise.rs  pulse.rs  sweep.rs  timer.rs  triangle.rs
src/cpu/: addressing_mode.rs  controller.rs  core_memory.rs  cpu.rs  cpu_to_ppu_message.rs  instruction.rs  memory_mirror.rs  mod.rs  operation.rs  ppu_listener.rs  program_state.rs  status_flag.rs
src/cpu/tests/: addressing_mode_tests.rs  controller_tests.rs  cpu_tests.rs  instruction_tests.rs  memory_tests.rs  mod.rs  test_mapper.rs  tests.rs
src/mapper/: axrom.rs  bank_array.rs  mapper.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
src/menu/: mod.rs
src/menu/tests/: menu_tests.rs  mod.rs
src/ppu/: mod.rs  palette.rs  ppu.rs  ppu_internal_registers.rs  ppu_listener.rs  ppu_registers.rs  ppu_scroll_state.rs  ppu_state.rs  ppu_to_cpu_message.rs  sprite_info.rs  tile.rs
src/ppu/tests/: internal_register_tests.rs  mock_mapper.rs  mod.rs  palette_tests.rs  register_io_tests.rs  rendering_tests.rs  sprite_evaluation_tests.rs  vram_mirror_tests.rs
src/renderer/: gtk_renderer.rs  mod.rs  pixels_renderer.rs
src/renderer/tests/: renderer_tests.rs
src/simulator/: mod.rs  program_state.rs  render_requester.rs  scheduler.rs
src/simulator/tests/: mod.rs  program_state_tests.rs  scheduler_tests.rs
