[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
fnv = "1.0.7"
pixels = "0.15.0"
rodio = "0.21.1"
winit = "0.30.12"
