[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
bit_reverse = "0.1.8"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.1"
fnv = "1.0.7"
image = "0.25.8"
pixels = "0.15.0"
rodio = "0.21.1"
winit = "0.30.12"
